// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The apply button should render a Resume Application button if an application revision exists with draft status and the application window is open 1`] = `
<Button
  active={false}
  disabled={false}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Resume CIIP application
</Button>
`;

exports[`The apply button should render a View Application button if an application revision exists with approved status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/view-application",
      "query": Object {
        "applicationId": "foo",
        "version": 1,
      },
    }
  }
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with rejected status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/view-application",
      "query": Object {
        "applicationId": "foo",
        "version": 1,
      },
    }
  }
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with requested changes status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/view-application",
      "query": Object {
        "applicationId": "foo",
        "version": 1,
      },
    }
  }
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a View Application button if an application revision exists with submitted status 1`] = `
<Link
  href={
    Object {
      "pathname": "/reporter/view-application",
      "query": Object {
        "applicationId": "foo",
        "version": 1,
      },
    }
  }
>
  <Button
    active={false}
    disabled={false}
    type="button"
    variant="primary"
  >
    View Submitted Application
  </Button>
</Link>
`;

exports[`The apply button should render a disabled button if an application revision exists with draft status and the application window is closed 1`] = `
<Button
  active={false}
  disabled={true}
  type="button"
  variant="info"
>
  The application window is closed
</Button>
`;

exports[`The apply button should render a disabled button if no applicationByApplicationId exists and the application window is closed 1`] = `
<Button
  active={false}
  disabled={true}
  type="button"
  variant="info"
>
  The application window is closed
</Button>
`;

exports[`The apply button should render an Apply For CIIP button if no applicationByApplicationId exists and the application window is open 1`] = `
<Button
  active={false}
  disabled={false}
  onClick={[Function]}
  type="button"
  variant="primary"
>
  Apply for CIIP for this facility
</Button>
`;
